--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,8 +1,7 @@
 title: Rails 5.1 API with Webpacker React Front End
 email: tamara@tamouse.org
 description: >-
-  An example using the new (April 2017) version of Rails 5.1 with
-  webpacker making a React.JS front end.
+  See the repo at https://github.com/tamouse/r5api-react-starter
 baseurl: "/r5api-react-starter" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tamouse
