--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,7 @@
 title: Rails 5.1 API with Webpacker React Front End
 email: tamara@tamouse.org
 description: >-
-  See the repo at https://github.com/tamouse/r5api-react-starter
+  A sample project to try out the new Rails 5.1 and webpacker integration.
 baseurl: "/r5api-react-starter" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: tamouse
